--- a/python/src/gateway/Dockerfile
+++ b/python/src/gateway/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.10-slim-bullseye
 
 RUN apt-get update \
   && apt-get install -y --no-install-recommends --no-install-suggests \
-  build-essential default-libmysqlclient-dev pkg-config\
+  build-essential \
   && pip install --no-cache-dir --upgrade pip
 
 WORKDIR /app
@@ -10,6 +10,6 @@ COPY ./requirements.txt /app
 RUN pip install --no-cache-dir --requirement /app/requirements.txt
 COPY . /app
 
-EXPOSE 5000
+EXPOSE 8080
 
 CMD ["python3", "server.py"]
