Implement Auth Service with MySQL Integration and Minikube Deployment
- Added authentication service using Flask and MySQL for user login and JWT validation.
- Implemented /login route for credential validation and JWT creation.
- Implemented /validate route for token validation with enhanced error handling.
- Configured environment variables for MySQL connection using dotenv.
- Created Kubernetes Deployment manifest for the auth service with ConfigMap and Secret references.
- Configured the service to run on Minikube with RollingUpdate strategy for deployment.

--- a/python/src/auth/Dockerfile
+++ b/python/src/auth/Dockerfile
@@ -10,6 +10,8 @@ COPY ./requirements.txt /app
 RUN pip install --no-cache-dir --requirement /app/requirements.txt
 COPY . /app
 
+ENV JWT_SECRET=s3cUr3!R@nd0mK3y_2024*Th@tSh0uldN0tBeGuessed!
+
 EXPOSE 5000
 
 CMD ["python3", "server.py"]
